[project]
name = "zipcodemx"
version = "1.0.0"
description = "API REST códigos postales de México."
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
  "alembic>=1.18.5,<1.19.0",
  "bcrypt>=5.0.0,<5.1.0",
  "fastapi[standard]>=0.139.0,<1.0.0",
  "psycopg[binary]>=3.3.4,<3.4.0",
  "pydantic-settings>=2.14.2,<2.15.0",
  "pyjwt>=2.13.0,<2.14.0",
  "sqlmodel>=0.0.39,<0.1.0",
  "tzdata>=2026.2",
]

[dependency-groups]
dev = ["pytest>=9.1.1", "ruff>=0.15.21"]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.ruff]
exclude = [".git", ".venv", "alembic"]
line-length = 88
target-version = "py314"
cache-dir = "~/.cache/ruff"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "UP",   # pyupgrade
  "A",    # flake8-builtins
  "ARG",  # flake8-unused-arguments
  "C90",  # mccabe
  "DTZ",  # flake8-datetimez
  "ERA",  # eradicate
  "N",    # pep8-naming
  "PERF", # perflint
  "PIE",  # flake8-pie
  "PTH",  # flake8-use-pathlib
  "RET",  # flake8-return
  "S",    # flake8-bandit
  "T20",  # flake8-print
  "PL",   # pylint
  "FAST", # fastapi
]

ignore = [
  "B904", # Allow raising exceptions without from e
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
known-first-party = ["app"]
section-order = [
  "standard-library",
  "third-party",
  "app-core",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.isort.sections]
"app-core" = ["app.core"]


[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "S101",    # Use of assert
  "S106",    # Hardcoded password string
  "S107",    # Hardcoded password function argument
  "S105",    # Hardcoded password assigned to variable
  "ARG001",  # Unused function argument
  "PLR0913", # Too many arguments in function definition
  "PLR2004", # Magic value in comparison
  "E741",    # Ambiguous variable name
]

[tool.pytest.ini_options]
cache_dir = "~/.cache/pytest_cache"
pythonpath = ["."]
